--- a/sltk.html
+++ b/sltk.html
@@ -25,7 +25,7 @@
 	<main class="container">
 
 		<nav id="product-nav" class="full">
-            <li><a class="btn btn-outline-info" href="./host.html">Trang chủ</a></li>
+            <li><a class="btn btn-outline-info" href="./home.html"><img src="https://img.icons8.com/wired/19/000000/home.png"/>Trang chủ</a></li>
 			<li>
 				<div class="btn-group" role="group">
 					<button id="btnGroupDrop1" type="button" class="btn btn-outline-info" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,9 +42,7 @@
 					</ul>
 				  </div>
 			</li>
-			<li style="float: right"><a class="btn btn-outline-info" href="./admin.html">Thoát</a></li>
 
-			</li>
 		</nav>
 
 		<div class="container">
