--- a/sltk.html
+++ b/sltk.html
@@ -68,52 +68,108 @@
 						<tbody>
 							<tr>
 								<td>1</td>
-								<td>KH00394R5</td>
-								<td>Nguyễn Văn A</td>
-                                <td>12/2/1999</td>
-                                <td></td>
-								<td><button class="btn btn-danger">Xóa</button></td>
-							</tr>
-						</tbody>
-                        <tbody>
-							<tr>
-								<td>2</td>
-								<td>KH05767R5</td>
-								<td>Nguyễn Thị C</td>
-                                <td>12/2/1989</td>
-                                <td></td>
-								<td><button class="btn btn-danger">Xóa</button></td>
-							</tr>
-						</tbody>
-						
-                        <tbody>
-							<tr>
-								<td>3</td>
-								<td>KH21244R5</td>
-								<td>Phan Văn D</td>
-                                <td>12/12/1999</td>
-                                <td></td>
+								<td>KM1221</td>
+								<td>Kính Râm-Phong cách Hàn quốc</td>
+								<td>80</td>
+								<td>350</td>
 								<td><button class="btn btn-danger">Xóa</button></td>
 							</tr>
 						</tbody>
 
-                        <tbody>
+						<tbody>
 							<tr>
-								<td>4</td>
-								<td>KHHGF94R5</td>
-								<td>Bùi Ngọc M</td>
-                                <td>2/2/1999</td>
-                                <td></td>
+								<td>2</td>
+								<td>KM122543</td>
+								<td>Kính Cận-Phong cách Hàn quốc</td>
+								<td>100</td>
+								<td>900</td>
 								<td><button class="btn btn-danger">Xóa</button></td>
 							</tr>
 						</tbody>
-                        <tbody>
+
+						<tbody>
+							<tr>
+								<td>3</td>
+								<td>KM127687</td>
+								<td>Kính Áp Tròng-Phong cách Hàn quốc</td>
+								<td>45</td>
+								<td>830</td>
+								
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+
+						<tbody>
+							<tr>
+								<td>4</td>
+								<td>KM125641</td>
+								<td>Kính Cận</td>
+								<td>56</td>
+								<td>1235</td>
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+
+						<tbody>
 							<tr>
 								<td>5</td>
-								<td>KHQQ94R5</td>
-								<td>Hoàng Anh X</td>
-                                <td>12/2/1999</td>
-                                <td></td>
+								<td>KM1345221</td>
+								<td>Kính Râm</td>
+								<td>13</td>
+								<td>1003</td>
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+
+						<tbody>
+							<tr>
+								<td>6</td>
+								<td>KM1567221</td>
+								<td>Kính Áp Tròng</td>
+								<td>34</td>
+								<td>1223</td>
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+
+						<tbody>
+							<tr>
+								<td>7</td>
+								<td>KM1245621</td>
+								<td>Kính Cận-Phong cách Hàn quốc</td>
+								<td>120</td>
+								<td>476</td>
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+
+						<tbody>
+							<tr>
+								<td>8</td>
+								<td>KM1456221</td>
+								<td>Kính Cận-Phong cách Hàn quốc</td>
+								<td>68</td>
+								<td>334</td>
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+						<tbody>
+							<tr>
+								<td>9</td>
+								<td>KM123321</td>
+								<td>Kính Cận-Phong cách Hàn quốc</td>
+								<td>66</td>
+								<td>1134</td>
+								<td><button class="btn btn-danger">Xóa</button></td>
+							</tr>
+						</tbody>
+						<tbody>
+							<tr>
+								<td>10</td>
+								<td>KM461221</td>
+								<td>Kính Cận-Phong cách Hàn quốc</td>
+								<td>8888</td>
+								<td>1112</td>
 								<td><button class="btn btn-danger">Xóa</button></td>
 							</tr>
 						</tbody>
