--- a/host.html
+++ b/host.html
@@ -35,7 +35,9 @@
 					  <li><a class="dropdown-item text-black" href="DS.html">Danh sách khách hàng</a></li>
 					  <li><a class="dropdown-item text-black" href="sltk.html">Số lượng sản phẩm</a></li>
 					  <li><a class="dropdown-item text-black" href="#">Doang thu</a></li>
-					  <li><a class="dropdown-item" href="#"></a></li>
+					  <li><a class="dropdown-item" href="mail.html">Hòm thư</a></li>
+                      
+					  <li><a class="dropdown-item" href="notice.html">Thông báo</a></li>
 					</ul>
 				  </div>
 			</li>
