--- a/index2.html
+++ b/index2.html
@@ -118,7 +118,7 @@
                   <div class="box">
                     <h3 class="text-blue uppr">Sản phẩm NEW</h3>
                     <div class="product">
-                      <h2>Kính Áp Tròng-Gentle Gray</h2>
+                      <h4>Kính Áp Tròng-Gentle Gray</h4>
                       <img class="border border-5 rounded" src="img/product/Kính Áp Tròng/5.jpg" />
                       <p class="btn btn-outline-info">Xem sản phẩm</p>
                     </div>
@@ -127,10 +127,20 @@
                 <!-- finish new product box -->
               </div>
               <div class="light-background clear"
-                style="width: 95%; margin: 8px auto; padding:8px 16px;box-sizing: border-box;">
-                <h2>Chương trình khuyến mãi</h2>
-                <p>Áp dụng mã khuyễn mãi <code><strong>KINHMATHANGHIEU</strong></code> giảm 30% cho khách hàng có hóa đơn từ 200.000VND</p>
-              </div>
+              style="width: 95%; margin: 8px auto; padding:8px 16px;box-sizing: border-box;">
+              <h2><img src="https://img.icons8.com/wired/40/000000/discount-ticket.png"/><strong>Chương trình khuyến mãi</strong></h2>
+              <p>Áp dụng mã khuyễn mãi <code><strong>KINHMATHANGHIEU</strong></code> giảm 30% cho khách hàng có hóa đơn từ 1.000.000VND</p>
+            </div>
+            <div class="light-background clear"
+            style="width: 95%; margin: 8px auto; padding:8px 16px;box-sizing: border-box;">
+            <h2 class="text-dark"><img src="https://img.icons8.com/wired/40/000000/used-product.png"/><strong>Lỗi 1 đổi 1</strong></h2>
+            <p>Khách hàng có quyền đổi sản phẩm mới khi phát hiện lỗi do nhà sản xuất hoặc lỗi trong quá trình vận chuyển</p>
+          </div>
+          <div class="light-background clear"
+        style="width: 95%; margin: 8px auto; padding:8px 16px;box-sizing: border-box;">
+        <h2><img src="https://img.icons8.com/wired/40/000000/delivery.png"/><strong>Vận chuyển hỏa tốc</strong></h2>
+        <p>Thời gian giao hàng được rút ngắn chỉ từ 1-2 tiếng kể từ khi nhân viên xác nhận đơn hàng.</p>
+      </div>
             </div>
             </div>
 
