--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kính Mắt Hàng Hiệu-Đăng nhập</title>
+    <title>Đăng nhập</title>
     <link rel="shortcut icon" href="img/logo.ico" />
     <meta charset="utf-8" />
     <link href='https://fonts.googleapis.com/css?family=Advent+Pro:300,700' rel='stylesheet' type='text/css' />
