--- a/order.html
+++ b/order.html
@@ -80,27 +80,28 @@
                     </tr>
                     <tr>
                         <td>Tổng:</td>
-                        <td>1.000.000VND</td>
+                        <td>2.000.000VND</td>
                     </tr>
                     <tr>
                         <td>Hình thức giao hàng:</td>
                         <td>
                             <div>
-                                <input type="radio" name="dbt" value="cd">Vận chuyển hỏa tốc
+                                <input type="radio" name="bt" value="cd">Vận chuyển hỏa tốc
                             </div>
                             <div>
-                                <input type="radio" name="dbt" value="cd">Vận chuyển tiết kiệm
+                                <input type="radio" name="bt" value="cd">Vận chuyển tiết kiệm
                             </div>
                         </td>
                     </tr>
+
                     <tr>
                         <td>Hình thức thanh toán:</td>
                         <td>
                             <div>
-                                <input type="radio" name="dbt" value="cd"> Thanh toán khi nhận hàng
+                                <input type="radio" name="dbt" value="dd"> Thanh toán khi nhận hàng
                             </div>
                             <div>
-                                <input type="radio" name="dbt" value="cd"> Paypal <span>
+                                <input type="radio" name="dbt" value="dd"> Paypal <span>
                                     <img src="https://www.logolynx.com/images/logolynx/c3/c36093ca9fb6c250f74d319550acac4d.jpeg"
                                         alt="" width="50">
                                 </span>
