--- a/sltk.html
+++ b/sltk.html
@@ -38,7 +38,9 @@
 		
 					  <li><a class="dropdown-item text-black" href="#">Doanh thu</a></li>
 				
-					  <li><a class="dropdown-item" href="#"></a></li>
+					  <li><a class="dropdown-item" href="mail.html">Hòm thư</a></li>
+                      
+					  <li><a class="dropdown-item" href="notice.html">Thông báo</a></li>
 					</ul>
 				  </div>
 			</li>
