--- a/home.html
+++ b/home.html
@@ -71,6 +71,14 @@
                     </div></a>
           </div>
         </div>
+        <div class="col">
+          <div class="card h-10 shadow-lg btn-outline-light border border-primary w-50 d-inline-block">
+              <a href="./notice.html"><img src="https://img.icons8.com/wired/256/000000/alarm.png" class="card-img-top w-100 p-3"/>
+                  <div class="card-body">
+                    <h5 class="card-title text-center text-black">Thông báo<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary">+99 <span class="visually-hidden">unread messages</span></span></h5>
+                  </div></a>
+        </div>
+      </div>
       </div>
 </body>
 
