--- a/register.html
+++ b/register.html
@@ -35,22 +35,22 @@
 
 <div id="form_layout">
 <p id="head"></p>
-<!-- This segment displays the validation rule -->
+
 <h2>Đăng ký tài khoản</h2>
-<!-- Form starts from here -->
-<form onsubmit='returnformValidation()'>
+
+<form onsubmit='return formValidation()'>
 <label>Họ và tên:</label>
 <input id='firstname' type='text'>
 <p id="p1"></p>
-<!-- This segment displays the validation rule for name -->
+
 <label>Tên đăng nhập:</label>
 <input id='username' type='text'>
 <p id="p2"></p>
-<!-- This segment displays the validation rule for user name -->
+
 <label>Email:</label>
 <input id='email' type='text'>
 <p id="p3"></p>
-<!-- This segment displays the validation rule for email -->
+
 <label>Quốc gia:</label>
 <select id='state'>
 <option>
@@ -83,19 +83,16 @@ Sweden
 <option>
 Africa
 </option>
-</select>
 <p id="p4"></p>
-<!-- This segment displays the validation rule for selection -->
-<label>Địa chỉ:</label>
-<input id='addr' type='text'>
+</select>
+
+<label>Mật khẩu:</label>
+<input id='password' type='password'>
 <p id="p5"></p>
-
-<!-- This segment displays the validation rule for address -->
-
 <label>Số điện thoại:</label>
 <input id='sdt' type='tel'>
 <p id="p6"></p>
-<!-- This segment displays the validation rule for zip -->
+
 <input id="submit" type='submit' href="./login.html" value="Đăng ký">
 </form>
 </div>
