--- a/notice.html
+++ b/notice.html
@@ -36,7 +36,7 @@
 			
 					  <li><a class="dropdown-item text-black" href="sltk.html">Số lượng sản phẩm</a></li>
 		
-					  <li><a class="dropdown-item text-black" href="#">Doanh thu</a></li>
+					  <li><a class="dropdown-item text-black" href="price.html">Doanh thu</a></li>
 				
 					  <li><a class="dropdown-item" href="mail.html">Hòm thư</a></li>
                       
