--- a/order.html
+++ b/order.html
@@ -19,7 +19,7 @@
         <div class="d-flex">
             <form>
                 <label>
-                    <span class="fname">Họ tên:<span class="required">*</span></span>
+                    <span class="fname">Họ tên:<span class="required"></span></span>
                     <input type="text" name="fname">
                 </label>
             
@@ -28,20 +28,20 @@
                     <input type="date" name="cn">
                 </label>
                 <label>
-                    <span>Số điện thoại:<span class="required">*</span></span>
+                    <span>Số điện thoại:<span class="required"></span></span>
                     <input type="text" name="city">
                 </label>
                 <label>
-                    <span>Địa chỉ:<span class="required">*</span></span>
+                    <span>Địa chỉ:<span class="required"></span></span>
                     <input type="text" name="houseadd" placeholder="Vui lòng nhập số nhà và tên đường" required>
                 </label>
                
                 <label>
-                    <span>Tỉnh/Thành phố:<span class="required">*</span></span>
+                    <span>Tỉnh/Thành phố:<span class="required"></span></span>
                     <input type="text" name="city">
                 </label>
                 <label>
-                    <span>Phường/Xã:<span class="required">*</span></span>
+                    <span>Phường/Xã:<span class="required"></span></span>
                     <input type="text" name="city">
                 </label>
                 <label>
