--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
 
 <h2>Đăng ký tài khoản</h2>
 
-<form onsubmit='return formValidation()'>
+<form onsubmit ='return formValidation()'>
 <label>Họ và tên:</label>
 <input id='firstname' type='text'>
 <p id="p1"></p>
@@ -93,7 +93,7 @@ Africa
 <input id='sdt' type='tel'>
 <p id="p6"></p>
 
-<input id="submit" type='submit' href="./login.html" value="Đăng ký">
+<input id="submit" type='submit' value="Đăng ký">
 </form>
 </div>
 
